--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -961,6 +961,8 @@
         justify-content: center;
         align-items: center;
         cursor: pointer;
+        transition: background-color 125ms ease-in-out,
+            box-shadow 125ms ease-in-out;
         z-index: 9998;
     }
 
@@ -968,6 +970,11 @@
         width: 28px;
         height: 28px;
         object-fit: contain;
+    }
+
+    .mobile-add-contact-btn:active,
+    .contacts-page.mobile-detail-open .mobile-more-btn:active {
+        background: var(--login-button-primary-bg-active);
     }
 
     #mobileNav,
@@ -1430,6 +1437,8 @@
         align-items: center;
         padding: 0;
         cursor: pointer;
+        transition: background-color 125ms ease-in-out,
+            box-shadow 125ms ease-in-out;
         z-index: 9998;
         box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     }
